Add attendance API
